--- a/style.css
+++ b/style.css
@@ -1,9 +1,13 @@
-#container{
+#gameBoard{
     display:grid;
     grid-template-columns: 50px 50px 50px;
     grid-template-rows: 50px 50px 50px;
 }
 .square{
     border:1px solid black;
+}
+#info{
+    height:400px;
+    width:500px;
 }
 
