--- a/style.css
+++ b/style.css
@@ -1,13 +1,146 @@
+@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Roboto&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Roboto&family=Teko:wght@600&display=swap');
+
+
+*{
+    box-sizing: border-box;
+    font-family: "Vibur", sans-serif;
+    background-color: #010a01;
+
+}
+:root{
+    --sq-border: 4px solid #0fa;
+    --text-color: #0fa;
+}
+h1{
+    margin-top: 1vh;
+    font-family: 'Teko', sans-serif;
+    font-size: 12vh;
+    text-decoration: underline;
+    text-align: center;
+    color: #0fa;
+    margin-bottom: 0;
+}
+
+.inputs{
+    font-family: 'Teko', sans-serif;
+    color: var(--text-color);
+    text-align: center;
+    font-size: 3vh;
+}
+
+
+input{
+    color: var(--text-color);
+    font-size:30px;
+    margin-left: 30px;
+    border: 2px solid var(--text-color);
+    padding-left: 10px;
+    height:4vh;
+    width: 10vw;
+    min-width: 200px;
+    min-height: 40px;
+
+}
+input[type="text"]:focus{
+    outline: none;
+    border:5px solid var(--text-color);
+}
+input[type="text"]::selection{
+    outline: none;
+    border:5px solid var(--text-color);
+    
+
+}
+
+
+#playerOne{
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+input[type="submit"]{
+    margin-top: 40px;
+    margin-left: 0;
+    min-width: 200px;
+    min-height: 40px;
+    font-size: 30px;
+    height:4vh;
+    width: 10vw;
+
+}
+input[type="submit"]:hover{
+    scale:1.1;
+}
+
+
 #gameBoard{
+    margin-top: 3vh;
     display:grid;
-    grid-template-columns: 50px 50px 50px;
-    grid-template-rows: 50px 50px 50px;
+    
+    grid-template-columns: repeat(3, 15vh);
+    grid-template-rows: repeat(3, 15vh);
+
+
+
+    justify-content: center;
+    
+    color:#0fa;
 }
 .square{
-    border:1px solid black;
+    font-family: 'Permanent Marker', cursive;
+    border: var(--sq-border);
+    font-size: 12vh;
+    display:grid;
+    justify-content: center;
+    align-content: center;
+}
+
+.sq0, .sq1, .sq2{
+    border-top: none;
+}
+.sq2, .sq5, .sq8{
+    border-right: none;
+}
+.sq0, .sq3, .sq6{
+    border-left: none;
+}
+.sq6, .sq7, .sq8{
+   border-bottom: none;
+}
+
+.container{
+    
+    
+    
+    
+    
+
 }
 #info{
-    height:100px;
-    width:500px;
+    color: var(--text-color);
+    text-align: center;
+    margin-top: 5vh;
+
+    font-size: 3vh;
+
 }
+
+button{
+    color: var(--text-color);
+    font-size:30px;
+    border: 2px solid var(--text-color);
+    height:4vh;
+    width: 10vw;
+    
+    text-align: center;
+    margin: 2vh 4vh;
+    min-width:200px;
+    min-height: 40px;
+}
+button:hover{
+    scale:1.1;
+}
+
 
